Fix for bug 80, resource avaliability misalignment.
git-svn-id: https://develop.eng.uts.edu.au/projects/personal/sahara/svn/WI/trunk@1098 7ee224fa-57ca-4419-87f9-1f4314938d77

--- a/public/css/queue.css
+++ b/public/css/queue.css
@@ -94,6 +94,7 @@
 }
 
 .permissiondialog {
+	overflow: visible;
 }
 
 .permissiondialogloading {
@@ -136,6 +137,7 @@
 
 .dialogcentercontent {
 	text-align: center;
+	width: 275px;
 }
 
 .dialogheader {
@@ -161,6 +163,12 @@
 
 .dialogreslist ul li {
 	display: inline;
+}
+
+.dialogreslistspan {
+	display: block;
+	float: left;
+	width: 135px;
 }
 
 .dialogreslisticon {
